# open-baseball

./: .gitignore  GEMINI.md  README.md  commit-changes.skill  open-baseball.code-workspace  players.yml  video_registry.yml
.gemini/skills/commit-changes/: SKILL.md
analysis/: Makefile  README.md  analysis_config.yml  models.yml  pyproject.toml
analysis/scripts/: setup_models.py
analysis/src/baseball_lab/analyzers/: base.py  bat.py  swing.py
analysis/src/baseball_lab/core/: filter.py  metrics.py  pose.py  video.py
analysis/src/baseball_lab/services/: swing_analysis.py
data/: README.md
pipelines/: README.md  analyze_video.py  download_video.py  upload_video.py  visualize_video.py
